# pkb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml
docker/: docker-compose.test.yml
docs/: design-v1.md  usage-guide.md
docs/plans/: 2026-02-23-phase5-knowledge-graph-plan.md  2026-02-23-phase6-smart-assistant-plan.md  2026-02-23-phase7-analytics-dashboard-plan.md  2026-02-23-pkb-utilization-design.md  2026-02-27-stable-id-design.md  2026-02-27-stable-id-plan.md
examples/: config.yaml
prompts/: bundle_meta.txt  chat_analyst.txt  response_meta.txt
scripts/: build.sh  release.sh
scripts/hooks/: post-commit
src/pkb/: __init__.py  analytics.py  batch.py  cli.py  config.py  constants.py  dedup.py  digest.py  doctor.py  engine.py  ingest.py  init.py  logging_config.py  mcp_server.py  post_ingest.py  reembed.py  regenerate.py  reindex.py  relations.py  report.py  scheduler.py  watcher.py
tests/: conftest.py  test_analytics.py  test_batch.py  test_chat_modes.py  test_cli.py  test_cli_commands.py  test_cli_db.py  test_cli_kb.py  test_cli_reembed.py  test_config.py  test_db_analytics.py  test_db_relations.py  test_dedup.py  test_digest.py  test_doctor.py  test_doctor_embedding.py  test_encoding_safety.py  test_engine.py  test_ingest.py  test_logging_config.py  test_mcp_server.py  test_post_ingest.py  test_reembed.py  test_regenerate.py  test_reindex.py  test_relations.py  test_report.py  test_scheduler.py  test_vocab.py  test_vocab_manager.py  test_vocab_syncer.py  test_watcher.py  test_web_digest.py
tests/test_db/: test_schema.py  (+7 more)
(+131 files in other folders)
